--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,8 @@
 	margin: 2px;
 	font-size: 20px;
 }
+/* App.css */
+.input-placeholder {
+	font-size: 14px; /* Your desired font size */
+	color: "#BDC3D4";
+}
