--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,28 @@
 	font-size: 14px; /* Your desired font size */
 	color: "#BDC3D4";
 }
+
+.container {
+	display: flex;
+}
+
+.side-panel {
+	width: 20vw;
+	height: 80vh;
+	background-color: #f0f0f0;
+	padding: 16px;
+	overflow-y: auto; /* In case of many protein regions */
+}
+
+.side-panel h3 {
+	margin-bottom: 8px;
+}
+
+.side-panel ul {
+	list-style: none;
+	padding: 0;
+}
+
+.side-panel li {
+	margin-bottom: 4px;
+}
